 * Data dependencies are through registers only.
7.37
 * Add array access as a location, meaningfull only for litmus at present
7.36
 * herd: support for linux spin_lock and spin_unlock.
7.35
 * herd: Correct LISA rmw "exchange" -> same semantics as X86 xch
7.34
 * suppress some 32 bits constants -> 31 bits
 * gen : follow -realdep true option for AArch64 and ARM
7.33
 * herd: reformulate C load and store to use expressions as locations.
   Brittle (cf. jingle)
7.32
 * Specific internal dependencies for C exchange and LISA Rmw...
 * X86, correct data ports for the exchange instruction.
7.31
 * Backward compatibility
7.30
 * herd: bug LISA, parsing, add one-letter instruction as possible annotations.
7.29
 * herd: bug stdlib.cat (old fromto).
7.28
 * herd: correcy fromto ? At least compatible with article.
7.27
 * linux: lock -> rcu_read_lock; unlock -> rcu_read_unlock
7.26
 * AArch64, add logical and instruction.
 * Generators, implement -obs three,four,infinity
7.25
 * litmus bug, strh instruction were parsed as strb (copy-paste bug)
 * Linux atomic operations, xchg only.
7.24
 * Add AArch64 instruction STP/STNP (litmus only)
 * Correct msum7 -hexa ---> Conditions are also in hexa.
 * Add AArch64 instruction LDNP (litmus only).
7.23
 * Add AArch64 instruction LDP (litmus only).
 * Set X is also RMW (Lisa)
7.22
  * litmus option -exit true --> exit status reflects final condition success
    or failure.
  * qemu mode for litmus
  * add  -force option to mrcu forces translation in all conditions.
  * handle the CALL[sync] -> f[sync] change un mrcu
7.21
  * LISA: CALL instructuction reversed to  F instruction. Compatibility
    mode present.
7.20
  * C arch, correct stupid bug in control dependencies
   (forgot if without else....)
7.19
  * herd/cat : empty check also operates on sets.
  * Litmus: noalign meta information
7.18
  * Add a set of data ports to event structures, in order to separate
    data and address dependencies. Brittle on RMW.