@@ -1,3 +1,4 @@
+ * new mselect: specify intervals for number of ins and number of threads.
  * Data dependencies are through registers only.
 7.37
  * Add array access as a location, meaningfull only for litmus at present
